terraform/yml_manifests/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: eddie1322/order-service:latest
