terraform/yml_manifests/sneaker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sneaker-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sneaker-service
  template:
    metadata:
      labels:
        app: sneaker-service
    spec:
      containers:
        - name: sneaker-service
          image: eddie1322/sneaker-service:latest
