terraform/yml_manifests/sneaker-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sneaker-mongo-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sneaker-mongo
  template:
    metadata:
      labels:
        app: sneaker-mongo
    spec:
      containers:
        - name: sneaker-mongo
          image: mongo
