terraform/yml_manifests/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: auth-service
      protocol: TCP
      port: 3000
      targetPort: 3000
