terraform/yml_manifests/order-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-srv
  namespace: default
spec:
  selector:
    app: order-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
