terraform/yml_manifests/sneaker-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sneaker-mongo-srv
  namespace: default
spec:
  selector:
    app: sneaker-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
